# docker-template

./: .gitignore  README.md
django/: .gitignore  INSTALL.md  README.md  settings.py
django/002.debug/app/: entrypoint.sh
django/003.prod/: docker-compose.prod.yml  docker-compose.yml
django/003.prod/app/: Dockerfile.prod  Pipfile  entrypoint.sh
django/003.prod/nginx/: nginx.conf
django/004.postgis/django/: Dockerfile
django/005.auth_user_model/: .gitignore  README.md  docker-compose.yml
django/005.auth_user_model/django/: .env_app  Dockerfile  Pipfile  requirements.txt
django/005.auth_user_model/postgres/: .env_db
django/backend/containers/: docker-compose.yml
django/django-base/: README.md
django/django-base/001.base/: docker-compose.yml
django/django-base/002.debug/: docker-compose.yml
django/django-base/003.prod/: .env
django/django-base/004.postgis/: docker-compose.yml
django/django-heroku/: README.md  dot.env  pyproject.toml  pytest.ini  requirements.txt
django/django-heroku/apps/: admin.py
django/django-heroku/apps/templates/apps/: index.html
django/django-heroku/config/: settings.py  urls.py
django/django-heroku/docker/: docker-compose.yaml  dot.env
django/django-heroku/docker/db/: Dockerfile
django/django-heroku/requirements/: requirements.debug.txt  requirements.geo.txt  requirements.txt  requirements_windows_wheel.bat
django/django-heroku/users/: admin.py  models.py
django/django-heroku/users/migrations/: 0001_initial.py
django/django-postgis-redis/: README.md
postgis/: memo.md
redis/: docker-compose.yml
(+34 files in other folders)
